--- a/src/Components/Layout/MostPopular/MostRecent.css
+++ b/src/Components/Layout/MostPopular/MostRecent.css
@@ -1,6 +1,16 @@
-.most-popular-container{
-    outline: solid 1px red;
+.mostRecentContainer{
+    outline: solid 0.1px rgba(188,188,188,0.70);
     width: 80%;
     margin: 3% auto;
-    display: grid;
+    overflow-x:auto;
+}
+.mostRecentContainer::-webkit-scrollbar {
+    width:0;
+    background: rgba(0,0,0,0.1);
+}
+.mostRecentContainer .divCardMostRecentItem{
+    min-width:600%;
+    text-align:center;
+    display:flex;
+    background: rgba(0,0,0,0.1);
 }
