redireccion de anuncio a ventana de perfil de creador por medio de useParams

--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -30,6 +30,10 @@
   font-size: 2em;
 }
 
+.header-logo:hover{
+  cursor : pointer;
+}
+
 .header-actions{
   width: 60%;
   display: flex;
@@ -53,6 +57,10 @@
 .logo-header{
   width: 3em;
   margin: -1 0 2% 0;
+}
+
+.logo-header:hover{
+  cursor: pointer;
 }
 .header-action-icon{
   font-size: 1.5em;
