desarrollo de funcionalidad para envio de correos de notificacion de interes

--- a/src/Components/Layout/ForgotPasswordForm/ForgotPasswordForm.css
+++ b/src/Components/Layout/ForgotPasswordForm/ForgotPasswordForm.css
@@ -39,7 +39,7 @@
 .button-container{
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .send-email{
@@ -62,7 +62,7 @@
 .send-content{
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .send-register{
