--- a/src/Components/Layout/ShareProfile/ShareProfile.css
+++ b/src/Components/Layout/ShareProfile/ShareProfile.css
@@ -1,4 +1,4 @@
-.Container-father{
+.Container-father {
     width: 100%;
     height: 100vh;
     outline: solid 1px red;
@@ -6,45 +6,46 @@
     justify-content: center;
     align-items: center;
 }
-.Form-container{
-    -webkit-box-shadow: 4px 4px 5px -1px rgba(0,0,0,0.75);
--moz-box-shadow: 4px 4px 5px -1px rgba(0,0,0,0.75);
-box-shadow: 4px 4px 5px -1px rgba(0,0,0,0.75);
+
+.Form-container {
+    -webkit-box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.75);
     background-color: rgb(238, 238, 238);
     width: 35%;
     padding: 3% 4% 4% 4%;
     /* align-items: center; */
 }
 
-.logo-container{
+.logo-container {
     display: flex;
     align-items: center;
-    justify-content:start;
+    justify-content: flex-start;
     width: 100%;
     gap: 1%;
 }
 
-.Link-container{
+.Link-container {
     display: flex;
     justify-content: center;
 }
 
-.Icon-Share{
+.Icon-Share {
     padding-left: 0.3em;
     font-size: 1.2em;
     border: 0px;
 }
 
-a{
+a {
     font-size: 1.2em;
 }
 
-.Button-share-container{
+.Button-share-container {
     display: flex;
     justify-content: space-around;
 }
 
-.Button-share{
+.Button-share {
     font-size: 1.2em;
     border: 0px;
     background-color: rgb(105, 185, 157);
@@ -54,6 +55,6 @@ a{
     padding-right: 0.8em;
 }
 
-.Share-title{
+.Share-title {
     padding-bottom: 0.5em;
 }
