--- a/src/Components/Modal/ProfileSettings/ProfileSettings.css
+++ b/src/Components/Modal/ProfileSettings/ProfileSettings.css
@@ -22,7 +22,7 @@
     border-radius: 5px;
     background: rgba(0,0,0,0.04);
     display :flex;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 0.5em 0;
     align-items: center;
     box-shadow: 1px 5px 4px -4px #919191;
