--- a/src/Components/Layout/HomeSection/HomeSection.css
+++ b/src/Components/Layout/HomeSection/HomeSection.css
@@ -44,7 +44,7 @@
     border-radius: 30px;
     border: none;
     transition: 0.2s ease;
-    text-align: center;
+    text-align: start;
 }
 
 .search-box-home:focus{
