--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -1,28 +1,59 @@
 .anouncement-info-render{
-    outline: solid 1px red;
-}
-
-img{
-    width: 100%;
-}
-
-.anouncement-info-render{
     display: flex;
 }
 
 .anouncement-images-container{
+    padding: 1em 2em;
     width: 50%;
     display: flex;
+    gap: 1em;
 }
 
 .first-image{
-    outline: solid red 1px;
-    width: 80%;
+    width: 100%;
+    height: 27em;
+    border: 2px solid #FFFFFF;
+    outline: solid 0.5px rgba(150,150,150,0.50);
+    box-shadow: 0px 10px 13px -7px rgba(100,100,100,0.90), 5px 5px 15px 5px rgba(64,64,64,0);
+    overflow: hidden;
+    transition: 0.3s ease;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+}
+
+.first-image:hover .anouncement-first-image{
+    -webkit-transform:scale(1.3);
+    transform:scale(1.3);
+}
+
+
+.anouncement-first-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.4s ease;
 }
 
 .other-images-container{
     width: 20%;
-    outline: solid 1px red;
+    gap: 1em;
+    width: 10em;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+}
+.other-image-container{
+    width: 10em;
+    height: 8em;
+    border: 2px solid #FFFFFF;
+    outline: solid 0.5px rgba(150,150,150,0.50);
+    box-shadow: 0px 10px 13px -7px rgba(100,100,100,0.90), 5px 5px 15px 5px rgba(64,64,64,0);
+}
+
+.anouncement-other-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
