--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -1,16 +1,15 @@
 .anouncement-info-render{
     display: flex;
-    padding: 0 1em;
+    padding: 1em;
     gap: 1em;
-    margin: 1em;
 }
 
 .anouncement-images-container{
     padding: 1em;
-    width: 50%;
+    width: 60%;
     display: flex;
     gap: 1em;
-    background: rgba(0,0,0,0.10);
+    background: rgba(50,50,50,0.15);
     outline: solid .1px rgba(0,0,0,0.30);
 }
 
@@ -22,10 +21,6 @@
     box-shadow: 0px 10px 13px -7px rgba(100,100,100,0.90), 5px 5px 15px 5px rgba(64,64,64,0);
     overflow: hidden;
     transition: 0.3s ease;
-    -webkit-transition: 0.3s ease;
-    -moz-transition: 0.3s ease;
-    -ms-transition: 0.3s ease;
-    -o-transition: 0.3s ease;
 }
 
 .first-image:hover .anouncement-first-image{
@@ -61,4 +56,61 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.anouncement-aditional-info{
+    width: 25%;
+    outline: solid 1px red;
+    background: rgb(255,255,255);
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.actions-user-anouncement{
+    outline: solid 0.5px rgba(150,150,150,0.50);
+    width: 15%;
+
+}
+
+.anouncement-title{
+    line-height: 1.1em;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.8em;
+    font-weight: lighter;
+    outline: solid 1px red;
+}
+
+.anouncement-actions{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.anouncement-action-redirect{
+    outline: solid 0.5px rgba(150,150,150,0.50);
+    cursor: pointer;
+    padding: 10px;
+    background-color: rgb(215, 215, 215);
+    color: rgba(0, 0, 0, 0.74);
+    box-shadow: rgb(0 0 0 / 54%) 0px 2px 2px 0px, rgb(0 0 0 / 24%) 0px 0px 1px 0px;
+    border-radius: 2px;
+    border: 1px solid transparent;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.anouncement-action-redirect:hover{
+    transform: scale(103%);
+    color: rgba(0, 0, 0, 0.84);
+}
+
+.anouncement-description{
+    font-family: 'Poppins', sans-serif;
+    outline: solid 1px red;
+    font-size: 1.1em;
+    line-height: 1.5em;
 }
