--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -16,6 +16,7 @@
   background: rgb(229,229,229);
   padding: 0.5em;
   border-bottom: .1px solid rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
 .header-logo-container{
