--- a/src/Components/Layout/HomeSection/HomeSection.css
+++ b/src/Components/Layout/HomeSection/HomeSection.css
@@ -73,7 +73,8 @@
 
 .content-page-info{
     display: flex;
-    width: 100%;
+    margin: 1.5em auto 0 auto;
+    width: 90%;
     justify-content: space-around;
 }
 
