--- a/src/Components/UI/CardMostRecent/CardMostRecent.css
+++ b/src/Components/UI/CardMostRecent/CardMostRecent.css
@@ -1,12 +1,14 @@
 .titleMostRecent {
     margin:1em;
+    outline: solid 1px red;
 }
 .divCardMostRecent {
+    outline: solid 1px red;
     width:100%;
-    margin-right:1%;
     background-color:rgba(188,188,188,0.70);
-    margin:1em;
-    border-radius:10px;
+    margin:0.5em;
+    border: 4px solid rgb(255,255,255);
+    outline: solid 1px rgba(1,1,1,0.50);
 }
 .divImageCardMostRecent {
     width:80%;
@@ -23,8 +25,6 @@
     width:40%;
     padding:3px;
     border-radius:5px;
-    margin-bottom:2em;
-    margin-top:1em;
     background:rgba(0,0,0,0.6);
     cursor: pointer;
     color:#FFFFFF;
