--- a/src/Components/Page/Profile/Profile.css
+++ b/src/Components/Page/Profile/Profile.css
@@ -68,12 +68,17 @@
     border-radius: 255px;
 }
 
-
+.most-recent-container{
+    display: flex;
+    justify-content: start;
+    overflow-x: scroll;
+    border-radius: 5px;
+    width: 90%;
+    margin: auto;
+    background: #FFFFFF;
+    box-shadow: -1px 5px 7px -2px #919191;
+}
     
-
-
-
-
 /* anoucement profile */
 
 .anouncement-user-container{
@@ -84,6 +89,9 @@
     flex-direction: column;
     gap: 1em;
 }
+.anouncement-user-container::-webkit-scrollbar {
+    display: none;
+    }
 
 
 .anouncement-profile-submit{
