--- a/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
+++ b/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
@@ -1,19 +1,25 @@
 .card{
     background: #FFFF;
     position: relative;
-    border-radius: 20px;
-    margin: 20px auto;
+    border-radius: 5px;
+    margin: 20px 8px;
     width: 280px;
-    outline: solid 1px black;
+    border-radius: 5px;
+    transition: 80ms all ease;
+    box-shadow: 1px 5px 11px -2px #919191;
 }
 
 .card::before{
+    border-radius: 5px 5px 0 0;
     content: "";
     position: absolute;
     height: 45%;
     width: 100%;
     background: #7d2ae8;
-    border-radius: 20px 20px 0 0;
+}
+
+.card:hover{
+    margin: 10px 0 0 0 ;
 }
 
 .card-content{
@@ -22,7 +28,6 @@
     align-items: center;
     padding: 30px;
     position: relative;
-    z-index: 100;
 }
 
 .card .media-icons{
@@ -39,11 +44,16 @@
     opacity: 0.6;
     margin-top: 10px;
     transition: all 0.3s ease;
-    cursor: pointer;
 }
 
-.card .media-icons .card-action:hover{
-   opacity: 1; 
+.card:hover .media-icons .card-action{
+   opacity: 1;
+   cursor: pointer;
+    font-size: 1.1em;
+}
+
+.card-action{
+    transition: 0.3s all ease;
 }
 
 
@@ -61,7 +71,6 @@
     object-fit: cover;
     border-radius: 50%;
     border: 3px solid #FFFFFF;
-    
 }
 
 .card .name-atributes{
