cambio en cards de mas recientes // eliminacion de anuncios propios // cambio de diseño de cards

--- a/src/Components/Page/Profile/Profile.css
+++ b/src/Components/Page/Profile/Profile.css
@@ -68,7 +68,7 @@
 }
 
 .most-recent-container{
-    padding: 0 1em;
+    padding: 1.5em 0 1em 0;
     border-radius: 5px;
     width: 90%;
     margin: auto;
