--- a/src/Components/Layout/MostRecent/MostRecent.css
+++ b/src/Components/Layout/MostRecent/MostRecent.css
@@ -1,16 +1,11 @@
-.mostRecentContainer{
-    outline: solid 0.1px rgba(188,188,188,0.70);
+.most-recent-container-home{
     width: 90%;
-    margin: 1em auto;
-    overflow-x:auto;
+    margin:auto;
+    padding: 1.5em 0 1em 0;
 }
-.mostRecentContainer::-webkit-scrollbar {
-    width:0;
-    background: rgba(0,0,0,0.1);
+
+.most-recent-title{
+    text-align: center;
+    margin-bottom: 0.5em;
 }
-.mostRecentContainer .divCardMostRecentItem{
-    min-width:600%;
-    text-align:center;
-    display:flex;
-    background: rgba(0,0,0,0.1);
-}
+
