--- a/src/Components/Modal/ModalCreateAnouncement/ModalCreateAnouncement.css
+++ b/src/Components/Modal/ModalCreateAnouncement/ModalCreateAnouncement.css
@@ -140,7 +140,7 @@
     flex-direction: column;
     width: 100%;
     padding: 2%;
-    height: 50vh;
+    height: 300px;
     outline: solid 1px red;
 }
 
