--- a/src/Components/Layout/HomeSection/HomeSection.css
+++ b/src/Components/Layout/HomeSection/HomeSection.css
@@ -74,7 +74,7 @@
 .content-page-info{
     display: flex;
     margin: 1.5em auto 0 auto;
-    width: 90%;
+    width: 80%;
     justify-content: space-around;
 }
 
@@ -97,6 +97,12 @@
     text-align: center;
     width: 100%;
     margin: 2% auto;
+}
+
+@media screen and (max-width: 1600px){
+    .content-page-info{
+        width: 90%;
+    }
 }
 
 @media screen and (max-width:900px){
