--- a/src/Components/UI/CategoriesBar/CategoriesBar.css
+++ b/src/Components/UI/CategoriesBar/CategoriesBar.css
@@ -1,6 +1,6 @@
 .categories-bar{
     display: flex;
-    width: 90%;
+    width: 80%;
     margin: 2% auto;
     justify-content: center;
 }
@@ -38,6 +38,11 @@
 
 .categories-bar-container:hover  .category-icon{
     color: rgba(0,0,0,0.6);
+}
 
+@media screen and (max-width: 1600px){
+    .categories-bar{
+        width: 90%;
+    }
 }
 
