--- a/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
+++ b/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
@@ -3,8 +3,8 @@
     position: relative;
     border-radius: 5px;
     margin: 20px 8px;
-    width: 280px;
-    height: 24em;
+    width: 250px;
+    height: 21.5em;
     border-radius: 5px;
     transition: 0.25s all ease;
     box-shadow: 1px 5px 11px -2px #919191;
@@ -46,12 +46,13 @@
     opacity: 0.6;
     margin-top: 10px;
     transition: all 0.3s ease;
+    font-size: 0.8em;
 }
 
 .card:hover .media-icons .card-action {
     opacity: 1;
     cursor: pointer;
-    font-size: 1.1em;
+    font-size: 0.9m;
 }
 
 .card-action {
@@ -60,8 +61,8 @@
 
 
 .card-image-container {
-    height: 140px;
-    width: 140px;
+    height: 120px;
+    width: 120px;
     padding: 3px;
     border-radius: 50%;
     background: #919191; 
@@ -77,7 +78,7 @@
 
 .aling-info {
     width: 100%;
-    height: 12.8em;
+    height: 12em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
