--- a/src/Components/UI/ResultCards/ResultCards.css
+++ b/src/Components/UI/ResultCards/ResultCards.css
@@ -2,10 +2,10 @@
     border-radius: 5px;
     display: flex;
     width: 100%;
-    height: 12em;
+    height: 14em;
     gap: 1em;
-    box-shadow: 1px 5px 4px -4px #919191;
-    background-color: rgba(200,200,200,0.10);
+    box-shadow: 1px 5px 11px -2px #919191;
+    background-color: rgb(255,255,255);
 }
 
 .image-url-container{
@@ -16,6 +16,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px 0 0px 5px;
 }
 
 .card-info-render{
@@ -51,4 +52,3 @@
     justify-content: flex-end;
     
 }
-
