--- a/src/Components/Page/RandomBanner/RandomBanner.css
+++ b/src/Components/Page/RandomBanner/RandomBanner.css
@@ -1,6 +1,6 @@
 .random-banner{
     width: 80%;
-    padding: 1em 3em;
-    margin: 1em auto;
+    padding: 0 3em 1em 3em;
+    margin:  0 auto 1em auto;
     text-align: center;
 }
