--- a/src/Components/UI/RandomCard/RandomCard.css
+++ b/src/Components/UI/RandomCard/RandomCard.css
@@ -2,55 +2,93 @@
     width: 100%;
     margin: 1em;
     padding: 1em;
-    height: 29em;
+    height: 35em;
     background: rgba(35,35,35,.95);
     box-shadow: 1px 5px 14px -4px rgba(0,0,0,1);
     border-radius: 5px;
+    color: rgb(210,210,210)
 }
 
-.other-random-info-container {
-    display: flex;
-    height: 100%;
-}
 
 .other-random-info {
     width: 60%;
-
     padding: 1em;
+}
+
+.card-random-title-container{
+
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-random-title {
-    font-size: 1.8em;
+    font-size: 2.3em;
+    font-weight: bolder;
+    letter-spacing: 1.5px;
     text-align: center;
-    color: #FFFFFF;
     text-shadow: #e0e0e0 1px 1px 0;
 }
 
-.card-random-aditional {
-    outline: solid 1px #fff;
-    padding: 1em;
-}
-
-.other-random-image-container {
-    width: 50%;
+.card-images-random{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-}
-
-.image-container {
     width: 100%;
-    height: 25em;
     padding: 1em;
-
+    align-items: center;
+    justify-content: space-around;
 }
 
-.image-banner {
+.secondary-image-random{
+    width: 25%;
+    height: 14em;
+}
+
+.secondary-render{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 12px 1px rgba(0, 0, 0, 0);
     border-radius: 5px;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 12px 1px rgba(0, 0, 0, 0);
+    transition: all 0.3s ease;
+}
 
+.secondary-render:hover{
+    transform: scale(110%);
+}
+
+.primary-images-random{
+    width: 40%;
+    height: 18em;
+    border-radius: 5px;
+}
+
+.description-other-random{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+    padding: 0.5em;
+    font-size: 0.95em;
+}
+
+.button-random-redirect{
+    padding: 0.8em 9em;
+    margin: 0.5em 0 0 0;
+    border-radius: 5px;
+    border: none;
+    color: #000000;
+    cursor: pointer;
+    background: rgb(89,228,168);
+    transition: all 0.3s ease;
+    font-size: 101%;
+    font-weight: bolder;
+}
+
+.button-random-redirect:hover{
+    
+    color: #000;
+    padding: 0.85em 11em;
+    font-weight: bolder;
 }
