--- a/src/Components/Page/AboutUs/AboutUs.css
+++ b/src/Components/Page/AboutUs/AboutUs.css
@@ -13,7 +13,7 @@
 .link-documentation{
     margin: 15px;
     text-decoration: none;
-    color:rgba(136,136,136,0.70);
+    color:#595959;
     display: block;
 }
 
@@ -22,8 +22,7 @@
     display: block;
     width: 0;
     height: 2px;
-    background-color: rgba(136,136,136,0.70);;
-    /* transition: width 3.s; */
+    background-color: #595959;
     transition: width 0.25s ease-out;
 }
 .link-documentation:hover::after{
@@ -37,7 +36,7 @@
     border-radius: 9px;
     margin: auto;
     padding: 15px;
-    color:rgba(136,136,136,0.70);
+    color:#595959;
     
 }
 
@@ -49,6 +48,7 @@
     width: 70%;
     margin: auto;
     margin-top: 100px;
+    margin-top: 500px;
 }
 
 #grid-item-photo{
@@ -65,7 +65,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("https://cdn.pixabay.com/photo/2018/06/22/11/02/schnoor-3490494_1280.jpg"); 
+    /* background-image: url("https://cdn.pixabay.com/photo/2018/06/22/11/02/schnoor-3490494_1280.jpg");  */
 }
 #filter{
     -webkit-backdrop-filter: blur(15px);
