--- a/src/Components/UI/PhotosSlider/PhotosSlider.css
+++ b/src/Components/UI/PhotosSlider/PhotosSlider.css
@@ -2,10 +2,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20%;
+
 }
 
 .carousel-title{
     position: absolute;
     font-size: 5em;
     border: solid 5px white;
+    color: #fff;
 }
+
+.first-description{
+    position: absolute;
+    color: #fff;
+    margin-top: 20%;
+    font-size: 20px;
+}
+
