Efecto blur a imagenes del slider

--- a/src/Components/UI/PhotosSlider/PhotosSlider.css
+++ b/src/Components/UI/PhotosSlider/PhotosSlider.css
@@ -3,20 +3,37 @@
     justify-content: center;
     align-items: center;
     margin-top: 20%;
+    filter: blur(4px);
 
 }
+/* .flex-carousel::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.75;
+    position: absolute;
+    margin-top: 100%;
+} */
+
+
 
 .carousel-title{
     position: absolute;
     font-size: 5em;
     border: solid 5px white;
     color: #fff;
+    margin-top: 10%;
 }
 
 .first-description{
     position: absolute;
     color: #fff;
-    margin-top: 20%;
+    margin-top: 30%;
     font-size: 20px;
+    width: 60%;
 }
 
+.text{
+    text-align: center;
+}
