--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -10,25 +10,19 @@
     width: 60%;
     display: flex;
     gap: 1em;
-    background: rgba(50,50,50,0.15);
-    outline: solid .1px rgba(0,0,0,0.30);
+    background: rgba(0,0,0,0.15);
+    border-radius: 5px;
+    box-shadow: 1px 5px 11px -2px #919191;
 }
 
 .first-image{
     width: 100%;
     height: 27em;
-    border: 2px solid #FFFFFF;
-    outline: solid 0.5px rgba(150,150,150,0.50);
-    box-shadow: 0px 10px 13px -7px rgba(100,100,100,0.90), 5px 5px 15px 5px rgba(64,64,64,0);
     overflow: hidden;
     transition: 0.3s ease;
+    border-radius: 5px;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 12px 1px rgba(0, 0, 0, 0);
 }
-
-.first-image:hover .anouncement-first-image{
-    -webkit-transform:scale(1.3);
-    transform:scale(1.3);
-}
-
 
 .anouncement-first-image{
     width: 100%;
@@ -47,40 +41,58 @@
 }
 .other-image-container{
     width: 10em;
-    height: 8em;
-    border: 2px solid #FFFFFF;
-    outline: solid 0.5px rgba(150,150,150,0.50);
-    box-shadow: 0px 10px 13px -7px rgba(100,100,100,0.90), 5px 5px 15px 5px rgba(64,64,64,0);
+    height: 8em; 
 }
-
 .anouncement-other-image{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 12px 1px rgba(0, 0, 0, 0);
 }
 
 .anouncement-aditional-info{
     width: 25%;
-    outline: solid 1px red;
-    background: rgb(255,255,255);
+    background: rgba(0,0,0,0.18);
+    border-radius: 5px;
+    box-shadow: 1px 5px 11px -2px #919191;
     padding: 1em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
 .actions-user-anouncement{
-    outline: solid 0.5px rgba(150,150,150,0.50);
+    background: rgba(0,0,0,0.21);
     width: 15%;
-
+    box-shadow: 1px 5px 11px -2px #919191;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
 }
 
 .anouncement-title{
-    line-height: 1.1em;
+    text-transform: uppercase;
+    line-height: 1em;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.8em;
+    font-size: 1.6em;
     font-weight: lighter;
     outline: solid 1px red;
+    font-weight: bolder;
+    text-align: center;
+    margin: 0.25em 0 0 0;
+    color: rgb(37,46,53);
 }
 
 .anouncement-actions{
@@ -89,24 +101,27 @@
     gap: 1em;
 }
 
+.anuncement-value{
+    display: flex;
+}
+
 .anouncement-action-redirect{
     outline: solid 0.5px rgba(150,150,150,0.50);
     cursor: pointer;
     padding: 10px;
-    background-color: rgb(215, 215, 215);
-    color: rgba(0, 0, 0, 0.74);
-    box-shadow: rgb(0 0 0 / 54%) 0px 2px 2px 0px, rgb(0 0 0 / 24%) 0px 0px 1px 0px;
-    border-radius: 2px;
+    color: rgb(89,228,168) ;
+    background: rgb(37,46,53);
+    border-radius: 5px;
     border: 1px solid transparent;
     font-size: 14px;
     font-weight: 500;
     cursor: pointer;
     transition: 0.3s ease;
+    font-weight: bolder;
 }
 
 .anouncement-action-redirect:hover{
     transform: scale(103%);
-    color: rgba(0, 0, 0, 0.84);
 }
 
 .anouncement-description{
@@ -114,14 +129,18 @@
     outline: solid 1px red;
     font-size: 1.1em;
     line-height: 1.5em;
+    margin: 2em 0 0 0;
 }
 
 .carousel-anouncement-container{
-    outline: solid 1px red;
+    background: #FFFFFF;
     width: 80%;
     border-radius: 5px;
-    margin: 0 auto 1em auto;
+    margin: 0 auto 2em auto;
     padding: 0.5em 1em;
+    background: rgba(0,0,0,0.10);
+    box-shadow: 1px 5px 11px -2px #919191;
+
 }
 
 @media screen and (max-width: 1600px){
