--- a/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
+++ b/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
@@ -65,7 +65,7 @@
     width: 120px;
     padding: 3px;
     border-radius: 50%;
-    background: #919191; 
+    background: rgb(130,130,130); 
 }
 
 .card-image {
@@ -112,7 +112,8 @@
     background: rgba(35, 35, 35, 0.95);
     outline: none;
     border: none;
-    color: #FFFFFF;
+    color: rgb(89,228,168);
+    font-weight: bolder;
     width: 100%;
     padding: 1em;
     border-radius: 5px;
