--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -88,11 +88,13 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 1.6em;
     font-weight: lighter;
-    outline: solid 1px red;
     font-weight: bolder;
     text-align: center;
     margin: 0.25em 0 0 0;
     color: rgb(37,46,53);
+    background: #FFF;
+    padding: 0.2em;
+    border-radius: 5px;
 }
 
 .anouncement-actions{
@@ -124,14 +126,6 @@
     transform: scale(103%);
 }
 
-.anouncement-description{
-    font-family: 'Poppins', sans-serif;
-    outline: solid 1px red;
-    font-size: 1.1em;
-    line-height: 1.5em;
-    margin: 2em 0 0 0;
-}
-
 .carousel-anouncement-container{
     background: #FFFFFF;
     width: 80%;
@@ -141,6 +135,48 @@
     background: rgba(0,0,0,0.10);
     box-shadow: 1px 5px 11px -2px #919191;
 
+}
+
+.anouncement-information-complete{
+    display: flex;
+    gap: 2em;
+    justify-content: space-around;
+}
+
+.anouncement-complement{
+    background: #FFF;
+    margin: 0.5em 0;
+    border-radius: 5px;
+    padding: 1em;
+
+}
+.anounce-value-container{
+    gap: 0.2em;
+    display: flex;
+    justify-content: center;
+    font-weight: bolder;
+    align-items: baseline;
+    background:  #FFFFFF;
+    border-radius: 5px;
+    margin: 0.5em 0;
+    text-shadow: 3px 5px 2px rgba(0,0,0,0.1);
+}
+
+.value-center{
+    font-size: 1.5em;
+    font-weight: bolder;
+    letter-spacing: 0.015em;
+}
+
+
+.anounce-characteristics{
+    background: #FFF;
+    border-radius: 5px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 1600px){
