--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -1,7 +1,7 @@
 .anouncement-info-render{
     display: flex;
     width: 80%;
-    margin: 1em auto;
+    margin: 1em auto 0 auto;
     gap: 1em;
 }
 
@@ -32,7 +32,6 @@
 }
 
 .other-images-container{
-    width: 20%;
     gap: 1em;
     width: 10em;
     display: flex;
@@ -75,11 +74,24 @@
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    padding: 1em;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-    justify-content: end;
+    padding: 1em;
+    gap: 0.5em;
+}
+
+.props-user{
+    width: 100%;
+    padding: 0 1em 0.5em 1em;
+    color: rgba(0,0,0,0.80);
+    font-weight: bolder;
+}
+.prop-email{
+    font-size: 0.8em;
+    width: 100%;
+    
 }
 
 .anouncement-title{
@@ -90,10 +102,9 @@
     font-weight: lighter;
     font-weight: bolder;
     text-align: center;
-    margin: 0.25em 0 0 0;
     color: rgb(37,46,53);
     background: #FFF;
-    padding: 0.2em;
+    padding: 0.5em;
     border-radius: 5px;
 }
 
@@ -120,6 +131,7 @@
     cursor: pointer;
     transition: 0.3s ease;
     font-weight: bolder;
+    width: 100%;
 }
 
 .anouncement-action-redirect:hover{
@@ -130,7 +142,7 @@
     background: #FFFFFF;
     width: 80%;
     border-radius: 5px;
-    margin: 0 auto 2em auto;
+    margin: 1em auto 2em auto;
     padding: 0.5em 1em;
     background: rgba(0,0,0,0.10);
     box-shadow: 1px 5px 11px -2px #919191;
@@ -138,18 +150,52 @@
 }
 
 .anouncement-information-complete{
-    display: flex;
-    gap: 2em;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 32% 32% 32%;
+    padding: 1em 12em;
+}
+
+.anouncement-complement-information{
+    width: 80%;
+    margin: 1em auto;
+}
+
+.anounce-text-description{
+    text-align: center;
+    padding: 0.5em 0 0 0;
 }
 
 .anouncement-complement{
     background: #FFF;
     margin: 0.5em 0;
     border-radius: 5px;
-    padding: 1em;
+    padding: 0.5em 1em;
+}
+
+
+.anounce-characteristics{
+    font-weight: bolder;
+    color: rgba(0,0,0,0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.91em;
+    padding: 1em 0;
+    outline: solid .1px grey;
+    background: rgba(0,0,0,0.1);
+}
+
+.description-content{
+    display: flex;
 
 }
+
+.description-bolder{
+    font-weight: bolder;
+    margin: 0 0.5em 0 0;
+}
+
 .anounce-value-container{
     gap: 0.2em;
     display: flex;
@@ -169,18 +215,50 @@
 }
 
 
-.anounce-characteristics{
-    background: #FFF;
-    border-radius: 5px;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 @media screen and (max-width: 1600px){
     .anouncement-info-render{
         padding: 1em;
+    }
+}
+
+@media screen and (max-width: 1500px){
+    .anouncement-images-container{
+        align-items: center;
+        width: 55%;
+    }
+
+    .actions-user-anouncement{
+        width: 20%;
+    }
+
+    .anouncement-info-render{
+        width: 95%;
+        padding: 1em 0;
+    }
+
+    .carousel-anouncement-container{
+        width: 95%;
+    }
+
+    .other-images-container{
+        justify-content:  flex-start;
+    }
+    .other-image-container{
+        width: 8em;
+        height: 6em;
+    }
+
+    .first-image{
+        height: 23em;
+    }
+
+    .anouncement-complement-information{
+        width: 95%;
+        margin: 0 auto 1em auto;
+    }
+
+    .prop-email{
+        font-size: 0.7em;
     }
 }
