--- a/src/Components/UI/UserImage/UserImage.css
+++ b/src/Components/UI/UserImage/UserImage.css
@@ -7,9 +7,9 @@
     display: inline-block;
     text-align: center;
     transition: 0.3s ease;
-    margin: 1em;
     border-radius: 255px;
 }
+
 
 
 .background-profile-image{
@@ -19,3 +19,9 @@
     border-radius: 255px;
 }
 
+@media screen and (max-width: 1500px){
+    .profile-user-image{
+        width: 125px;
+        height: 120px;
+    }
+}
