--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -44,7 +44,7 @@
 }
 
 .header-action-button{
-  padding: 1em 2.3em;
+  padding: 1em 2.5em;
   border-radius: 5px;
   border: none;
   cursor: pointer;
@@ -122,4 +122,37 @@
   height: 30px;
   object-fit: cover;
   border-radius: 255px;
+}
+
+.viewTextIcon {
+  text-align:center;
+}
+.header-actions .iconHeader .viewTextIcon {
+  position:absolute;
+  color: rgba(15,15,15,1);
+  background-color:rgb(229,229,229);
+  padding:2px 18px;
+  font-size:17px;
+  bottom:0px;
+  border-radius:25px;
+  opacity:0;
+  pointer-events:none;
+  margin:auto;
+}
+.header-actions .iconHeader:hover .viewTextIcon {
+  opacity:1;
+  bottom:-40px;
+  pointer-events:auto;
+  transition:all 0.5s cubic-bezier(0.68,-0.55,0.256,1.55);
+  margin:auto;
+}
+.header-actions .iconHeader .viewTextIcon::before {
+  position:absolute;
+  content:"";
+  height:10px;
+  width:10px;
+  top: -5px;
+  right:50%;
+  transform: translateX(50%) rotate(45deg);
+  background-color:rgb(229,229,229);
 }
