--- a/src/Components/Layout/RegisterFooter/RegisterFooter.css
+++ b/src/Components/Layout/RegisterFooter/RegisterFooter.css
@@ -8,7 +8,7 @@
 }
 
 .footer-icons{
-    width: 20%;
+    width: 25%;
     margin: .9% auto;
     display: flex;
     justify-content: space-around;
@@ -21,6 +21,10 @@
     padding: 10px;
     color:rgb(89,228,168);
     cursor: pointer;
+    transition: 0.4s ease;
+}
+.footer-icon:hover {
+    background-color:rgba(165, 164, 164, 0.7);
 }
 
 .footer-title{
@@ -32,10 +36,10 @@
 
 .footer-relinks{
     display: flex;
-    width: 30%;
+    width: 60%;
     justify-content: space-around;
     margin: auto;
-    font-size: 80%;
+    font-size: 70%;
     color: rgba(154,204,207,1);
 }
 .footer-textInfo{
