--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -73,6 +73,10 @@
   color:rgba(0,0,0,0.1);
 }
 
+.header-responsive{
+  display: none;
+}
+
 .header-nouser-actions{
   width: 20%;
   display: flex;
@@ -155,4 +159,104 @@
   right:50%;
   transform: translateX(50%) rotate(45deg);
   background-color:rgb(229,229,229);
+}
+
+@media screen and (max-width: 1250px){
+  .header-container{
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header-logo-container{
+    width: 10%;
+  }
+}
+
+@media screen and (max-width: 1050px){
+  .logo-header{
+    display: none;
+  }
+
+  .header-action-button{
+    padding: 0.9em 1.5em;
+  }
+
+  .header-nouser-actions{
+    width: 27%;
+  }
+}
+
+@media screen and (max-width: 860px){
+  .header-logo-container{
+    height: 2.5em;
+    width: 10%;
+  }
+
+  .logo-header{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .header-action-button{
+    padding: 0.7em 1em;
+    margin: 0;
+  }
+
+  .header-actions{
+    width: 50%;
+  }
+
+  .nouser-action{
+    font-size: 0.7em;
+  }
+}
+
+@media screen and ( max-width: 730px ){
+  .header-actions{
+    width: 70%;
+    gap: 1em;
+  }
+
+  .header-logo-container{
+    width: 17%;
+  }
+  .header-nouser-actions{
+    width: auto;
+  }
+
+  .nouser-action{
+    display: none;
+  }
+
+  .header-responsive{
+    display: flex;
+    padding: 0.55em 0.8em;
+  }
+}
+
+@media screen and (  max-width: 530px ){
+  .header-container{
+    width: 100%;
+  }
+
+
+  .header-logo-container{
+    width: 20%;
+    font-size: 0.70em;
+  }
+
+  .header-nouser-actions{
+    width: 15%;
+    justify-content: center;
+  }
+
+  .header-actions{
+    width: 50%;
+    gap: 0.5em;
+  }
+
+  .action-responsive{
+    display: none;
+  }
 }
