--- a/src/Components/Page/RandomBanner/RandomBanner.css
+++ b/src/Components/Page/RandomBanner/RandomBanner.css
@@ -4,3 +4,16 @@
     margin:  0 auto 1em auto;
     text-align: center;
 }
+
+@media screen and (max-width :1200px){
+    .random-banner{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width :700px){
+    .random-banner{
+        width: 95%;
+        padding: 0 1em 1em 1em;
+    }
+}
