--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -9,7 +9,7 @@
 
 .header-container{
   display: flex;
-  width: 100%;
+  width: 100vw;
   justify-content: flex-end;
   position: sticky;
   top: 0;
@@ -236,11 +236,6 @@
 }
 
 @media screen and (  max-width: 530px ){
-  .header-container{
-    width: 100%;
-  }
-
-
   .header-logo-container{
     width: 20%;
     font-size: 0.70em;
