--- a/src/Components/Layout/RegisterFooter/RegisterFooter.css
+++ b/src/Components/Layout/RegisterFooter/RegisterFooter.css
@@ -4,14 +4,15 @@
     width: 100%;
     background: rgba(35,35,35,0.95);
     text-align: center;
-    padding: 1% 0;
+    padding: 1em 0 ;
 }
 
 .footer-icons{
-    width: 25%;
-    margin: .9% auto;
+    width: 100%;
+    margin: 1em 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 1em;
 }
 
 .footer-icon{
@@ -28,7 +29,7 @@
 }
 
 .footer-title{
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     font-family:'Poppins', sans-serif;
     color: #FFFFFF;
     font-size: 1.5em;
@@ -36,9 +37,9 @@
 
 .footer-relinks{
     display: flex;
-    width: 60%;
-    justify-content: space-around;
-    margin: auto;
+    width: 100%;
+    justify-content: center;
+    gap: 3em;
     font-size: 70%;
     color: rgba(154,204,207,1);
 }
@@ -51,21 +52,25 @@
     color: rgba(154,204,207,1);
 }
 
-@media screen and (max-width: 900px){
-    .footer-relinks{
-        width: 30%;
-        margin: 2% auto;
-    }
-}
+@media screen and (max-width:630px){
 
-@media screen and (max-width: 400px){
-    .footer-icon{
-        font-size: 120%;
-        margin: 0 4%;
+    .footer-title{
+        font-size: 1.2em;
+        letter-spacing: 1px;
     }
 
     .footer-relinks{
-        width: 60%;
+        width: 100%;
+        font-size: 41%;
+        padding: 0 1em;
+        justify-content:space-between;
+    }
+
+    .footer-icons{
+        gap: 0.4em;
+    }
+
+    .footer-textInfo{
+        width: 25%;
     }
 }
-
