--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -1,257 +1,190 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  text-decoration: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
 }
 
 .header-container{
-  display: flex;
-  width: 100vw;
-  justify-content: flex-end;
-  position: sticky;
-  top: 0;
-  background: rgb(229,229,229);
-  padding: 0.5em;
-  border-bottom: .1px solid rgba(0,0,0,0.2);
-  z-index: 1;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.2em 1em;
+    z-index: 1;
+    position: sticky;
+    top: 0;
+    background: rgb(229,229,229);
 }
 
 .header-logo-container{
-  width: 20%;
-  display: flex;
-  align-items: center;
-  padding: 0 1em;
-  gap: 4%;
+    display: flex;
+    align-items: center;
+    width: 15%;    
 }
 
-.header-logo{
-  font-weight: bolder;
-  font-size: 2em;
-}
-
-.header-logo:hover{
-  cursor : pointer;
-}
-
-.header-actions{
-  width: 60%;
-  display: flex;
-  justify-content: center;
-  gap: 1.4em;
-}
-
-.header-action-button{
-  padding: 1em 2.5em;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  transition: 0.4s ease ;
-  background: #FFFF;
-}
-
-.header-action-button:hover{
-  background: rgba(0,0,0,0.6);
+.logo-content{
+    width: 4em;
+    height: 4em;
 }
 
 .logo-header{
-  width: 3em;
-  margin: -1 0 2% 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.logo-header:hover{
-  cursor: pointer;
+.header-logo{
+    font-weight: bolder;
+    font-size: 2em;
+  }
+
+.header-actions{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    gap: 1.5em;
+    align-items: center;
 }
-.header-action-icon{
-  font-size: 1.5em;
-  color: rgba(0,0,0,0.7);
+
+.header-action-button{
+    padding: 1em 2.2em;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: 0.4s ease ;
+    background: #FFFF;
+  }
+
+.header-action-button:hover{
+  background: rgba(0,0,0,0.6);
 }
 
 .header-action-button:hover ~ .header-action-icon{
   color:rgba(0,0,0,0.1);
 }
 
-.header-responsive{
-  display: none;
+.header-action-icon{
+    font-size: 1.5em;
+    color: rgba(0,0,0,0.7);
 }
 
-.header-nouser-actions{
-  width: 20%;
-  display: flex;
-  justify-content: flex-end;
-  padding: 0 1em;
-  gap: 4%;
-  align-items: center;
+.nouser-actions{
+    width: 25%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .nouser-action{
-  cursor: pointer;
-  width: 100%;
-  border-radius: 5px;
-  border: none;
-  font-size: 0.8em;
-  font-weight: bolder;
-  color: rgba(0,0,0,0.7);
-  transition: 0.3s ease;
-  padding: 0.8em ;
-  background: rgb(255,255,255);
-}
-
-.nouser-action:hover{
-  background: rgba(0,0,0,0.6);
-}
-
-.header-user-settings{
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 0.5em;
-  gap: 4%;
-  background :rgba(255,255,255);
-  border-radius: 5px;
-}
-
-.text-header-profile{
-  width: 100%;
-  font-size: 0.9em;
-  padding: 0 1em;
-  text-decoration: none;
-}
-
-.header-profile{
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-  border-radius: 255px;
-}
-
-.viewTextIcon {
-  text-align:center;
-}
-.header-actions .iconHeader .viewTextIcon {
-  position:absolute;
-  color: rgba(15,15,15,1);
-  background-color:rgb(229,229,229);
-  padding:2px 18px;
-  font-size:17px;
-  bottom:0px;
-  border-radius:25px;
-  opacity:0;
-  pointer-events:none;
-  margin:auto;
-}
-.header-actions .iconHeader:hover .viewTextIcon {
-  opacity:1;
-  bottom:-40px;
-  pointer-events:auto;
-  transition:all 0.5s cubic-bezier(0.68,-0.55,0.256,1.55);
-  margin:auto;
-}
-.header-actions .iconHeader .viewTextIcon::before {
-  position:absolute;
-  content:"";
-  height:10px;
-  width:10px;
-  top: -5px;
-  right:50%;
-  transform: translateX(50%) rotate(45deg);
-  background-color:rgb(229,229,229);
-}
-
-@media screen and (max-width: 1250px){
-  .header-container{
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .header-logo-container{
-    width: 10%;
-  }
-}
-
-@media screen and (max-width: 1050px){
-  .logo-header{
-    display: none;
-  }
-
-  .header-action-button{
-    padding: 0.9em 1.5em;
-  }
-
-  .header-nouser-actions{
-    width: 27%;
-  }
-}
-
-@media screen and (max-width: 860px){
-  .header-logo-container{
-    height: 2.5em;
-    width: 10%;
-  }
-
-  .logo-header{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .header-action-button{
-    padding: 0.7em 1em;
-    margin: 0;
-  }
-
-  .header-actions{
-    width: 50%;
-  }
-
-  .nouser-action{
-    font-size: 0.7em;
-  }
+    text-align: center;
 }
 
-@media screen and ( max-width: 730px ){
-  .header-actions{
-    width: 70%;
-    gap: 1em;
-  }
+.nouser-action button{
+     cursor: pointer;
+      border-radius: 5px;
+      width: 90%;
+      border: none;
+      font-size: 0.8em;
+      font-weight: bolder;
+      color: rgba(0,0,0,0.7);
+      transition: 0.3s ease;
+      padding: 0.88em 0.5em;
+      background: rgb(255,255,255);
+}
 
-  .header-logo-container{
-    width: 17%;
-  }
-  .header-nouser-actions{
-    width: auto;
-  }
-
-  .nouser-action{
+.icon-none{
     display: none;
-  }
-
-  .header-responsive{
-    display: flex;
-    padding: 0.55em 0.8em;
-  }
 }
 
-@media screen and (  max-width: 530px ){
-  .header-logo-container{
-    width: 20%;
-    font-size: 0.70em;
-  }
+@media screen and (max-width : 1050px ){
 
-  .header-nouser-actions{
-    width: 15%;
-    justify-content: center;
-  }
+    .logo-content{
+        width: 3.5em;
+        height: 3.5em;
+    }
+    .header-actions{
+        gap: 0.5em;
+        width: 50%;
+    }
 
-  .header-actions{
-    width: 50%;
-    gap: 0.5em;
-  }
+    .nouser-actions{
+        width: 30%;
+    }
 
+    .header-action-button{
+        padding: 0.89em 1.5em;
+    }
+
+    .nouser-action button{
+        font-size: 0.7em;
+        padding: 1em 0;
+    }
+}
+
+@media screen and ( max-width : 860px){
+
+    .header-container{
+        padding: 0.7em 0;
+    }
+    .logo-content{
+        display: none
+    }
+
+    .header-logo-container{
+        width: 10%;
+        justify-content: center;
+    }
+
+    .header-actions{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 720px ){
+    .header-container{
+        padding: 0.5em 0;
+    }
+
+    .header-logo-container{
+        width: 15%;
+    }
+
+    .header-action-button{
+        padding: 0.70em 0.90em;
+    }
+
+    .header-action-icon{
+        font-size: 1.2em;
+    }
+
+    .header-actions{
+        width: 70%;
+    }
+
+    .nouser-actions{
+        width: 15%;
+    }
+
+    .nouser-action{
+        display: none;
+        
+    }
+
+    .icon-none{
+        display: block;
+    }
+}
+
+@media screen and (max-width: 430px ){
   .action-responsive{
-    display: none;
+      display: none;
+  }
+
+  .header-logo-container{
+      width: 20%;
   }
 }
