Actualizacion de la implementacion de titulos referente a botones en el header

--- a/src/Components/Layout/ShareProfile/ShareProfile.css
+++ b/src/Components/Layout/ShareProfile/ShareProfile.css
@@ -38,6 +38,9 @@
 
 a {
     font-size: 1.2em;
+    position: relative;
+    display:flex;
+    justify-content:center;
 }
 
 .Button-share-container {
