--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -31,12 +31,14 @@
 }
 
 .logo-header{
+    cursor: pointer;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 .header-logo{
+    cursor: pointer;
     font-weight: bolder;
     font-size: 2em;
   }
@@ -138,6 +140,33 @@
     object-fit: cover;
     border-radius: 255px;
 }
+
+.header-actions .iconHeader .viewTextIcon {
+    color:rgba(15, 15, 15, 1);
+    background-color:rgb(229,229,229);
+    padding:2px 18px;
+    font-size:17px;
+    bottom:0px;
+    border-radius:5px;
+    position:absolute;
+    opacity:0;
+}
+.header-actions .iconHeader:hover .viewTextIcon {
+    opacity:1;
+    bottom:-45px;
+    transition:0.5s cubic-bezier(0.68,-0.55,0.256,1.55);
+}
+.header-actions .iconHeader .viewTextIcon::before {
+    position:absolute;
+    content: "";
+    height:10px;
+    width:10px;
+    top:-5px;
+    right:50%;
+    transform:translateX(50%) rotate(45deg);
+    background-color:rgb(229,229,229);
+}
+
 
 @media screen and (max-width : 1050px ){
 
