--- a/src/Components/Layout/FormSingUp/FormSingUp.css
+++ b/src/Components/Layout/FormSingUp/FormSingUp.css
@@ -3,7 +3,7 @@
     height: auto;
     display: flex;
     justify-content: center;
-    background:  linear-gradient(90deg, rgba(154,204,207,0.75718837535014) 50%, rgba(17,50,136,0.65) 100%),url("https://cdn.pixabay.com/photo/2018/03/19/18/46/driveway-3240834_960_720.jpg");
+    background:  linear-gradient(90deg, rgba(34, 58, 52, 0.757) 50%, rgba(25, 30, 21, 0.65) 100%),url("https://cdn.pixabay.com/photo/2018/03/19/18/46/driveway-3240834_960_720.jpg"); 
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -33,7 +33,7 @@
 }
 
 .info-input-register:focus{
-    outline: 1px solid #1C6EA4;
+    outline: 1px solid #324439;
 }
 
 .add-register-info{
@@ -64,13 +64,10 @@
 .register-submit{
     width: 80%;
     padding: 2%;
-    background: #9ACCCF;
-    background: -moz-linear-gradient(left, #9ACCCF 0%, #1C6EA4 100%, #113288 100%);
-    background: -webkit-linear-gradient(left, #9ACCCF 0%, #1C6EA4 100%, #113288 100%);
-    background: linear-gradient(to right, #9ACCCF 0%, #1C6EA4 100%, #113288 100%);
+    color: rgb(89,228,168) ;
+    background : rgb(37,46,53);
     border: none;
     border-radius: 5px;
-    color: #FFFFFF;
     font-size: 100%;
     font-weight: bolder;
     letter-spacing: 1px;
@@ -99,9 +96,6 @@
 .create-account-register{
     margin: 4% 0 0 0;
 }
-
-/* @media screen and (max-width: 900px)
-@media screen and (max-width: 1250px) */
 
 @media screen and (max-width: 900px){
     .register-valid-info{
