--- a/src/Components/Page/AboutUs/AboutUs.css
+++ b/src/Components/Page/AboutUs/AboutUs.css
@@ -77,8 +77,12 @@
     border-radius: 9px;
 }
 
-@media screen and (max-width:720px){
+
+
+
+
+/* @media screen and (max-width:720px){
     .allcontainers{
         grid-template-columns: repeat(1, 1fr);
     }
-}
+} */
