--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -1,13 +1,95 @@
-.advertisement-info{
+.advertisement-info {
     width: 100%;
     outline: solid 1px red;
-    padding: 1em;
-    margin: 1em 0;
+    padding: 2em 3em;
     display: flex;
-    justify-content: space-around;
+    flex-direction: row-reverse;
+    justify-content:center;
+    gap: 1em;
+    background: linear-gradient(100deg, rgba(109, 108, 108, 0.757) 30%, rgba(255, 255, 255, 0.75) 100%), url(https://cdn.pixabay.com/photo/2017/09/08/15/21/house-2729079_960_720.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.prop-advertisement{
-    outline: solid 1px red;
-    width: 400px;
+.prop-advertisement {
+    max-width: 400px;
+    background-color: #fff;
+    width: 100%;
+    padding:1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.user-target-data {
+    background: rgb(229, 229, 229);
+    border-radius: 5px;
+    width: 100%;
+    text-align: center;
+    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.30);
+}
+
+.user-target {
+    display: flex;
+    justify-content: space-around;
+    width: 95%;
+    margin: 0 auto;
+    padding: 1em 0;
+}
+
+.text-container-dot{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    gap: 0.5em;
+    justify-content: flex-end;
+    flex-direction: row-reverse;
+}
+
+.user-data-title {
+    width: 100%;
+    background: rgba(35, 35, 35, 0.95);
+    color: rgb(89, 228, 168);
+    border-radius: 5px 5px 0 0;
+}
+
+.user-target-info {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3em;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: flex-start;
+
+}
+
+.prop-advertisement-subinfo {
+    width: 100%;
+}
+
+.user-target-actions {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 49% 49%;
+    grid-template-rows: auto auto;
+    gap: 0.5em 2%;
+    border-radius: 5px;
+}
+
+.target-profile-actions {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3em;
+    font-weight: bolder;
+    color: rgba(35, 35, 35, 0.95);
+    padding: 1em 0;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: 0.3s ease all;
+    border-radius: 5px;
+    border: none;
+    background: rgb(229, 229, 229);
+    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.30);
 }
