--- a/src/Components/UI/CategoriesBar/CategoriesBar.css
+++ b/src/Components/UI/CategoriesBar/CategoriesBar.css
@@ -13,6 +13,9 @@
     transition: 0.3s ease;
     outline: solid .1px rgba(188,188,188,0.70);
     background: rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 0.2em;
 }
 
 .categories-bar-container:hover{
