--- a/src/Components/UI/RandomCard/RandomCard.css
+++ b/src/Components/UI/RandomCard/RandomCard.css
@@ -73,7 +73,7 @@
 .button-random-redirect{
     text-align: center;
     width: 50%;
-    padding: 0.8em ;
+    padding: 0.7em 0 ;
     margin: 0.5em 0 0 0;
     border-radius: 5px;
     border: none;
@@ -87,10 +87,8 @@
 }
 
 .button-random-redirect:hover{
-    
+    transform: scale(103%);
     color: #000;
-    padding: 0.85em 11em;
-    font-weight: bolder;
 }
 
 @media screen and (max-width: 1100px ){
