--- a/src/Components/UI/AnouncementImages/AnouncementImages.css
+++ b/src/Components/UI/AnouncementImages/AnouncementImages.css
@@ -33,10 +33,9 @@
 }
 
 .add-image-info{
-    outline: solid 1px red;
     width: 100%;
     margin: 1em 0 0 0;
-    background: #fff;
+    background: rgba(0,0,0,0.4);
     display: flex;
     justify-content: center;
     gap: 1em;
