--- a/src/Components/UI/ProfileImage/ProfileImage.css
+++ b/src/Components/UI/ProfileImage/ProfileImage.css
@@ -3,17 +3,18 @@
     border: 5px solid rgb(255,255,255);
     width: 205px;
     height: 200px;
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    display: block;
     text-align: center;
     transition: 0.3s ease;
     border-radius: 255px;
+    z-index: 1;
 }
 
 .options-container{
     display: none;
     gap: 1em;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -22,7 +23,6 @@
     flex-direction: column;
 
 }
-
 
 .profile-update:hover .options-container{ 
     display: flex;
@@ -56,4 +56,23 @@
     outline: solid 1px rgba(0,0,0,0.50);
     background-color: rgba(0,0,0,0.50);
     color: rgb(255,255,255);
+}
+
+.profile-update-container{
+    width: 100%;
+    outline: solid 1px red;
+}
+
+.background-image-container{
+    width: 100%;
+    height: 11em;
+    background-color: black;
+    position: absolute;
+}
+
+.user-update-information{
+    position: absolute;
+    width: 100%;
+    height: 11em;
+    background: red;
 }
