--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -109,6 +109,7 @@
     width: 80%;
     color: rgba(35,35,35,0.95);
     cursor: pointer;
+    text-transform: capitalize;
 }
 
 .miniature-container{
