--- a/src/Components/Modal/ProfileSettings/ProfileSettings.css
+++ b/src/Components/Modal/ProfileSettings/ProfileSettings.css
@@ -46,6 +46,7 @@
     color: rgba(0,0,0,0.75);
     font-weight: bolder;
     font-size: 1.25em;
+    text-transform: capitalize;
 }
 .send-profile-button{
     margin: 2% 0 0 0;
