--- a/src/Components/Page/Profile/Profile.css
+++ b/src/Components/Page/Profile/Profile.css
@@ -20,11 +20,10 @@
     width: 100%;
     margin: 1em auto;
     background: #fff;
-    outline: solid 1px red;
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    padding:  1em 2em;
+    padding:  1em 2em 0.5em 2em;
     border-radius: 5px;
     box-shadow: -1px 5px 7px -2px #919191;
 }
@@ -47,24 +46,11 @@
     align-items: center;
 }
 
-.profile-tools{
-    width: 100%;
-    padding: 1em;
-    display: flex;
-}
-
-.profile-tools-container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 
 .line-profile-separator {
     border: .1px solid rgba(200, 200, 200, 0.7);
-    width: 100%;
-    margin: auto;
+    width: 99%;
+    margin:  0 auto;
     border-radius: 5px;
 }
 
