--- a/src/Components/UI/ProfileImage/ProfileImage.css
+++ b/src/Components/UI/ProfileImage/ProfileImage.css
@@ -1,20 +1,21 @@
-.profile-update{
-    outline: 2.5px solid rgb(150,150,150);
-    border: 5px solid rgb(255,255,255);
+.profile-update {
+    outline: 2.5px solid rgb(150, 150, 150);
+    border: 5px solid rgb(255, 255, 255);
     width: 205px;
     height: 200px;
-    position: absolute;
-    display: block;
+    position: relative;
+    display: inline-block;
     text-align: center;
     transition: 0.3s ease;
     border-radius: 255px;
+    margin: 8.5em 2em;
     z-index: 1;
 }
 
-.options-container{
+.options-container {
     display: none;
     gap: 1em;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -24,27 +25,28 @@
 
 }
 
-.profile-update:hover .options-container{ 
+
+.profile-update:hover .options-container {
     display: flex;
     transform: 0.3s ease;
 }
 
-#image-update{
+#image-update {
     display: none;
 }
 
-.img-update-label{
+.img-update-label {
     cursor: pointer;
 }
 
-.background-profile{
+.background-profile {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 255px;
 }
 
-.image-user-options{
+.image-user-options {
     display: flex;
     padding: 0.8em 1em;
     gap: 0.5em;
@@ -53,26 +55,72 @@
     cursor: pointer;
     border-radius: 5px;
     border: none;
-    outline: solid 1px rgba(0,0,0,0.50);
-    background-color: rgba(0,0,0,0.50);
-    color: rgb(255,255,255);
+    outline: solid 1px rgba(0, 0, 0, 0.50);
+    background-color: rgba(0, 0, 0, 0.50);
+    color: rgb(255, 255, 255);
 }
 
-.profile-update-container{
+/* container for the banner */
+
+.image-update-container {
     width: 100%;
-    outline: solid 1px red;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 380px;
+    border-radius: 5px;
 }
 
-.background-image-container{
-    width: 100%;
-    height: 11em;
-    background-color: black;
+
+
+.banner-image-container {
+    width: 1115px;
+    height: 235px;
+        background:  linear-gradient(90deg, rgba(34, 58, 52, 0.757) 50%, rgba(25, 30, 21, 0.65) 100%),url("https://cdn.pixabay.com/photo/2020/02/26/10/21/colombia-4881379_960_720.jpg"); 
+
     position: absolute;
+    border-radius: 10px;
 }
 
-.user-update-information{
+.text-update-container {
+    width: 1115px;
+    height: 150px;
+    background: #fff;
     position: absolute;
-    width: 100%;
-    height: 11em;
-    background: red;
+    margin: 15em 0 0 0;
+    border-radius: 0 0 10px 10px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.profile-tools {
+    width: 78%;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.content-image-props {
+    display: flex;
+}
+
+.content-props-user {
+    padding: 0  2em 0 0;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+
+.user-name-tools{
+    font-size: 47px;
+    color: rgba(35,35,35,0.95);
+    text-transform: capitalize;
+}
+
+.user-data-tools{
+    font-family: 'Mulish', sans-serif;  
+    color:  rgba(25, 25, 25, 0.95);
+    font-weight: bolder;
+    font-size: 18px;
 }
