solucion a errores de solucion de imagenes

--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -66,7 +66,7 @@
 
 .value-email{
     text-align: start;
-    height: 1.2em;
+    height: 1.3qem;
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
