--- a/src/Components/UI/ResultCards/ResultCards.css
+++ b/src/Components/UI/ResultCards/ResultCards.css
@@ -25,6 +25,7 @@
     border-radius: 10px;
     box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.25);
     outline: solid 1px rgb(150,150,150);
+    cursor: pointer;
 }
 
 .card-info-render{
@@ -40,6 +41,7 @@
     flex-direction: column;
     align-items: flex-end;
     padding: 1em 1em 0.5em 1em;
+    cursor: pointer;
 }
 
 .text-container-icon{
