creacion de cards propias para la ventana profile , para eliminar y actualizar anuncios propios

--- a/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
+++ b/src/Components/UI/MyAnouncementCard/MyAnouncementCard.css
@@ -108,7 +108,7 @@
     width: 100%;
 }
 
-.card .button-visualizer .action-visualizer {
+.action-visualizer {
     background: rgba(35, 35, 35, 0.95);
     outline: none;
     border: none;
