--- a/src/Components/UI/ProfileImage/ProfileImage.css
+++ b/src/Components/UI/ProfileImage/ProfileImage.css
@@ -74,7 +74,7 @@
 
 
 .banner-image-container {
-    width: 1115px;
+    width: 1200px;
     height: 235px;
         background:  linear-gradient(90deg, rgba(34, 58, 52, 0.757) 50%, rgba(25, 30, 21, 0.65) 100%),url("https://cdn.pixabay.com/photo/2020/02/26/10/21/colombia-4881379_960_720.jpg"); 
 
@@ -123,4 +123,109 @@
     color:  rgba(25, 25, 25, 0.95);
     font-weight: bolder;
     font-size: 18px;
+}
+
+
+@media screen and (max-width : 1440px){
+    .banner-image-container{
+        width: 83%;
+    }
+}
+
+@media screen and (max-width : 1300px ){
+    .text-update-container{
+        width: 83%;
+    }
+}
+
+@media screen and (max-width : 1200px) {
+
+
+    .profile-update{
+        width: 155px;
+        height: 150px;
+    }
+
+    .background-profile{
+        width: 100%;
+        height: 100%;
+    }
+
+    .image-user-options{
+        padding: 0.5em 0.3em 0.5em 0;
+        width: 70%;
+        margin: auto;
+        text-align: center;
+    }
+
+    .options-container{
+        width: 100%;
+    }
+
+    .user-name-tools{
+        font-size: 40px;
+    }
+
+    .content-image-props{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width : 880px){
+    .profile-tools{
+        width: 100%;
+    }
+
+    .user-name-tools{
+        text-align: center;
+    }
+
+    .content-image-props{
+        justify-content: space-around;
+    }
+
+}
+
+@media screen and ( max-width : 680px ){
+
+    .content-image-props{
+        flex-direction: column;
+        gap: 0.5em;
+        align-items: center;  
+    }
+
+    .content-props-user{
+        width: 250px;
+    }
+
+    .banner-image-container{
+        height: 180px;
+    }
+
+    .user-data-tools{
+        font-size: 18px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .text-update-container{
+        margin: 13em 0 0 0;
+    }
+
+    .image-update-container{
+        align-items: center;
+    }
+
+    .image-update-container{
+        height: 380px;
+    }
+
+    .profile-update{
+        margin: 5em 0;
+    }
+
+    .user-name-tools{
+        font-size: 25px;
+        padding: 0.5em 0 0 0;
+    }
 }
