--- a/src/Components/Modal/ModalCreateAnouncement/ModalCreateAnouncement.css
+++ b/src/Components/Modal/ModalCreateAnouncement/ModalCreateAnouncement.css
@@ -181,3 +181,42 @@
     color: rgba(0,0,0,0.65);
     width: 245px;
 }
+
+@media screen and (max-width: 610px) {
+
+    .create-info{
+        height: 240px;
+    }
+
+    .create-title{
+        font-size: 17px;
+    }
+
+    .create-progress{
+        margin: 0.5em 0;
+    }
+
+    .create-subtitle{
+        font-size: 16px;
+        margin: 0 0 0.5em 0;
+    }
+
+    .required-info{
+        height: 260px;
+        padding: 0;
+    }
+
+    .first-action-container{
+        padding: 1em 0 0 0;
+    }
+
+    .row{
+        height: 150px;
+    }
+
+    .modality-complete{
+        width: 100%;
+        flex-direction: column;
+        gap: 0.3em;
+    }
+}
