--- a/src/Components/UI/UserAnouncementCard/UserAnouncementCard.css
+++ b/src/Components/UI/UserAnouncementCard/UserAnouncementCard.css
@@ -68,3 +68,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 500px){
+    .mycard-container{
+        width: 218px;
+    }
+}
