--- a/src/Components/Page/AboutUs/AboutUs.css
+++ b/src/Components/Page/AboutUs/AboutUs.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 30%, rgba(18, 19, 17, 0) 100%), url("../../../images/grupo.png");
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 30%, rgba(18, 19, 17, 0) 100%), url("https://i.ibb.co/b7pBZ3C/grupo.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -133,7 +133,7 @@
 
 .tags-text-content {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 0.5em;
@@ -141,7 +141,6 @@
 
 .tag-title {
     width: 100%;
-    height: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -234,8 +233,8 @@
         }
 
         .tags-content{
-            padding: 0 0.5em 1em 0.5em;
-            height: 140px;
+            padding: 1em;
+            height: 160px;
         }
 
         .tags-text-content{
@@ -252,7 +251,7 @@
 
         .line-about{
             width: 2px;
-            height: 60%;
+            height: 80%;
         }
 
         .icon-about{
